--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                             <h3 id="discord-username" class="text-sm font-bold whitespace-nowrap">myk.rwt</h3>
                             <div id="discord-badges"
                                 class="bg-white/5 backdrop-blur-sm px-2 py-1 rounded-lg border border-white/10 inline-flex items-center gap-2">
-                                <img src="assets/2540_DiamondSword.png?v=3" class="w-4 h-4 flex-shrink-0" alt="Sword">
+                                <img src="assets/thunderbolt.png?v=3" class="w-4 h-4 flex-shrink-0" alt="Sword">
                             </div>
                         </div>
                         <p id="discord-lastseen" class="text-[10px] text-white/60 italic truncate">last seen 7 hours ago
