--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="flex flex-col gap-1 min-w-[200px]">
                     <div class="flex items-center gap-3">
                         <span id="profile-username"
-                            class="text-3xl font-bold font-glitch glitch-text tracking-widest text-white drop-shadow-lg">myk.rwt</span>
+                            class="text-3xl font-bold font-glitch glitch-text tracking-widest text-white drop-shadow-lg">aayu</span>
                     </div>
                     <div class="font-light text-sm text-white/70 flex items-center h-5 w-[280px]">
                         <span id="typewriter-text" class="glitch-text"></span><span class="animate-pulse">|</span>
