--- a/index.html
+++ b/index.html
@@ -172,18 +172,18 @@
 
             <div class="flex items-center justify-center gap-5 my-2 opacity-90 text-xl">
                 <img src="assets/star-left.webp" alt="star"
-                    style="filter: drop-shadow(0 0 8px rgba(255,255,255,1)) drop-shadow(0 0 15px rgba(255,255,255,0.8)) drop-shadow(0 0 25px rgba(255,255,255,0.5));"
+                    style="filter: drop-shadow(0 0 8px rgba(0,0,0,...)) drop-shadow(0 0 15px rgba(0,0,0,...)) drop-shadow(0 0 25px rgba(0,0,0,...));"
                     class="w-10 h-10 object-contain animate-pulse-slow">
                 <a id="discord-link" href="https://discord.com/users/1046088032920543312" target="_blank"
                     class="text-white hover:scale-110 transition-all"
-                    style="filter: drop-shadow(0 0 10px rgba(255,255,255,0.8));"><i
+                    style="filter: drop-shadow(0 0 10px rgba(0,0,0,...));"><i
                         class="fa-brands fa-discord"></i></a>
                 <a id="instagram-link" href="https://www.instagram.com/myk.rwt" target="_blank"
                     class="text-white hover:scale-110 transition-all"
-                    style="filter: drop-shadow(0 0 8px rgba(255,255,255,1)) drop-shadow(0 0 15px rgba(255,255,255,0.8)) drop-shadow(0 0 25px rgba(255,255,255,0.5));"><i
+                    style="filter: drop-shadow(0 0 8px rgba(0,0,0,...)) drop-shadow(0 0 15px rgba(0,0,0,...)) drop-shadow(0 0 25px rgba(0,0,0,...));"><i
                         class="fa-brands fa-instagram"></i></a>
                 <img src="assets/star-right.webp" alt="star"
-                    style="filter: drop-shadow(0 0 8px rgba(255,255,255,1)) drop-shadow(0 0 15px rgba(255,255,255,0.8)) drop-shadow(0 0 25px rgba(255,255,255,0.5));"
+                    style="filter: drop-shadow(0 0 8px rgba(0,0,0,...)) drop-shadow(0 0 15px rgba(0,0,0,...)) drop-shadow(0 0 25px rgba(0,0,0,...));"
                     class="w-10 h-10 object-contain animate-pulse-slow">
             </div>
 
