--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </style>
 </head>
 
-<body class="bg-black text-white h-screen w-screen overflow-hidden select-none">
+<body class="bg-black text-black h-screen w-screen overflow-hidden select-none">
 
     <div class="fixed inset-0 z-0">
         <video id="bg-video" muted loop playsinline preload="metadata"
@@ -90,7 +90,7 @@
 
     <div id="intro-overlay"
         class="fixed inset-0 z-[100] bg-black flex items-center justify-center cursor-pointer transition-all duration-1000">
-        <p class="text-white/80 text-2xl font-light tracking-[0.2em] animate-pulse-slow">Click here...</p>
+        <p class="text-black/80 text-2xl font-light tracking-[0.2em] animate-pulse-slow">Click here...</p>
     </div>
 
     <main id="main-content"
@@ -100,12 +100,12 @@
         <div id="volume-control"
             class="absolute top-6 left-6 glass-panel rounded-xl flex items-center justify-center gap-2 p-2 z-50 transition-all duration-300 group hover:px-3 hover:py-2">
             <i class="fa-solid fa-volume-high text-base flex-shrink-0" id="volume-icon"></i>
-            <input type="range" id="volume-slider" min="0" max="100" value="70" class="w-0 opacity-0 group-hover:w-20 group-hover:opacity-100 transition-all duration-300 h-1 bg-white/20 rounded-full appearance-none cursor-pointer
+            <input type="range" id="volume-slider" min="0" max="100" value="70" class="w-0 opacity-0 group-hover:w-20 group-hover:opacity-100 transition-all duration-300 h-1 bg-black/20 rounded-full appearance-none cursor-pointer
                 [&::-webkit-slider-thumb]:appearance-none [&::-webkit-slider-thumb]:w-3 [&::-webkit-slider-thumb]:h-3 
-                [&::-webkit-slider-thumb]:rounded-full [&::-webkit-slider-thumb]:bg-white 
+                [&::-webkit-slider-thumb]:rounded-full [&::-webkit-slider-thumb]:bg-black 
                 [&::-webkit-slider-thumb]:cursor-pointer [&::-webkit-slider-thumb]:hover:scale-110
                 [&::-moz-range-thumb]:w-3 [&::-moz-range-thumb]:h-3 [&::-moz-range-thumb]:rounded-full 
-                [&::-moz-range-thumb]:bg-white [&::-moz-range-thumb]:border-0 [&::-moz-range-thumb]:cursor-pointer">
+                [&::-moz-range-thumb]:bg-black [&::-moz-range-thumb]:border-0 [&::-moz-range-thumb]:cursor-pointer">
         </div>
 
         <div class="flex flex-col items-center gap-3 w-[90%] max-w-3xl animate-slide-up">
@@ -119,9 +119,9 @@
                 <div class="flex flex-col gap-1 min-w-[200px]">
                     <div class="flex items-center gap-3">
                         <span id="profile-username"
-                            class="text-3xl font-bold font-glitch glitch-text tracking-widest text-white drop-shadow-lg">aayu</span>
+                            class="text-3xl font-bold font-glitch glitch-text tracking-widest text-black drop-shadow-lg">aayu</span>
                     </div>
-                    <div class="font-light text-sm text-white/70 flex items-center h-5 w-[280px]">
+                    <div class="font-light text-sm text-black/70 flex items-center h-5 w-[280px]">
                         <span id="typewriter-text" class="glitch-text"></span><span class="animate-pulse">|</span>
                     </div>
                 </div>
@@ -143,13 +143,13 @@
                     </div>
                     <div class="font-minecraft flex-1 min-w-0">
                         <div class="flex items-center gap-2 mb-1 flex-wrap">
-                            <h3 id="discord-username" class="text-sm font-bold whitespace-nowrap">myk.rwt</h3>
+                            <h3 id="discord-username" class="text-sm font-bold blackspace-nowrap">myk.rwt</h3>
                             <div id="discord-badges"
-                                class="bg-white/5 backdrop-blur-sm px-2 py-1 rounded-lg border border-white/10 inline-flex items-center gap-2">
+                                class="bg-black/5 backdrop-blur-sm px-2 py-1 rounded-lg border border-black/10 inline-flex items-center gap-2">
                                 <img src="assets/thunderbolt.png?v=3" class="w-4 h-4 flex-shrink-0" alt="Sword">
                             </div>
                         </div>
-                        <p id="discord-lastseen" class="text-[10px] text-white/60 italic truncate">last seen 7 hours ago
+                        <p id="discord-lastseen" class="text-[10px] text-black/60 italic truncate">last seen 7 hours ago
                         </p>
                     </div>
                 </div>
@@ -175,11 +175,11 @@
                     style="filter: drop-shadow(0 0 8px rgba(0,0,0,...)) drop-shadow(0 0 15px rgba(0,0,0,...)) drop-shadow(0 0 25px rgba(0,0,0,...));"
                     class="w-10 h-10 object-contain animate-pulse-slow">
                 <a id="discord-link" href="https://discord.com/users/1046088032920543312" target="_blank"
-                    class="text-white hover:scale-110 transition-all"
+                    class="text-black hover:scale-110 transition-all"
                     style="filter: drop-shadow(0 0 10px rgba(0,0,0,...));"><i
                         class="fa-brands fa-discord"></i></a>
                 <a id="instagram-link" href="https://www.instagram.com/myk.rwt" target="_blank"
-                    class="text-white hover:scale-110 transition-all"
+                    class="text-black hover:scale-110 transition-all"
                     style="filter: drop-shadow(0 0 8px rgba(0,0,0,...)) drop-shadow(0 0 15px rgba(0,0,0,...)) drop-shadow(0 0 25px rgba(0,0,0,...));"><i
                         class="fa-brands fa-instagram"></i></a>
                 <img src="assets/star-right.webp" alt="star"
@@ -187,7 +187,7 @@
                     class="w-10 h-10 object-contain animate-pulse-slow">
             </div>
 
-            <div class="flex items-center gap-3 text-[10px] text-white mb-2 font-minecraft">
+            <div class="flex items-center gap-3 text-[10px] text-black mb-2 font-minecraft">
                 <span><i class="fa-solid fa-eye mr-1"></i> <span id="profile-views">13K</span></span>
                 <span>|</span>
                 <span><i class="fa-solid fa-location-dot mr-1"></i> <span id="profile-location">India</span></span>
@@ -196,23 +196,23 @@
             <div class="w-full max-w-lg">
                 <div class="flex justify-between text-sm font-medium mb-2 font-minecraft">
                     <span id="song-title">Depression...</span>
-                    <span id="time-display" class="text-white/60 text-xs font-minecraft">0:00 / 0:00</span>
+                    <span id="time-display" class="text-black/60 text-xs font-minecraft">0:00 / 0:00</span>
                 </div>
 
-                <div id="progress-container" class="w-full h-1 bg-white/20 rounded-full cursor-pointer group mb-3">
-                    <div id="progress-bar" class="h-full bg-white rounded-full w-0 relative">
+                <div id="progress-container" class="w-full h-1 bg-black/20 rounded-full cursor-pointer group mb-3">
+                    <div id="progress-bar" class="h-full bg-black rounded-full w-0 relative">
                         <div
-                            class="absolute -right-1 top-1/2 -translate-y-1/2 w-2 h-2 bg-white rounded-full opacity-0 group-hover:opacity-100 transition-opacity">
+                            class="absolute -right-1 top-1/2 -translate-y-1/2 w-2 h-2 bg-black rounded-full opacity-0 group-hover:opacity-100 transition-opacity">
                         </div>
                     </div>
                 </div>
 
                 <div class="flex justify-center items-center gap-6 text-lg">
-                    <button id="prev-btn" class="text-white/70 hover:text-white hover:scale-110 transition-all"><i
+                    <button id="prev-btn" class="text-black/70 hover:text-black hover:scale-110 transition-all"><i
                             class="fa-solid fa-backward-step"></i></button>
-                    <button id="play-pause-btn" class="text-white hover:scale-110 transition-all text-2xl"><i
+                    <button id="play-pause-btn" class="text-black hover:scale-110 transition-all text-2xl"><i
                             class="fa-solid fa-play"></i></button>
-                    <button id="next-btn" class="text-white/70 hover:text-white hover:scale-110 transition-all"><i
+                    <button id="next-btn" class="text-black/70 hover:text-black hover:scale-110 transition-all"><i
                             class="fa-solid fa-forward-step"></i></button>
                 </div>
             </div>
