--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <span id="profile-username"
                             class="text-3xl font-bold font-glitch glitch-text tracking-widest text-white drop-shadow-lg">aayu</span>
                     </div>
-                    <div class="font-light text-sm text-white/70 flex items-center h-5 w-[280px]">
+                    <div class="font-light text-sm text-red/70 flex items-center h-5 w-[280px]">
                         <span id="typewriter-text" class="glitch-text"></span><span class="animate-pulse">|</span>
                     </div>
                 </div>
