--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <div id="intro-overlay"
         class="fixed inset-0 z-[100] bg-white flex items-center justify-center cursor-pointer transition-all duration-1000">
-        <p class="text-white/80 text-2xl font-light tracking-[0.2em] animate-pulse-slow">Click here...</p>
+        <p class="text-black/80 text-2xl font-light tracking-[0.2em] animate-pulse-slow">Click here...</p>
     </div>
 
     <main id="main-content"
