--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     style="filter: drop-shadow(0 0 10px rgba(0,0,0,...));"><i
                         class="fa-brands fa-discord"></i></a>
                 <a id="instagram-link" href="https://www.instagram.com/myk.rwt" target="_blank"
-                    class="text-red hover:scale-110 transition-all"
+                    class="text-black hover:scale-110 transition-all"
                     style="filter: drop-shadow(0 0 8px rgba(0,0,0,...)) drop-shadow(0 0 15px rgba(0,0,0,...)) drop-shadow(0 0 25px rgba(0,0,0,...));"><i
                         class="fa-brands fa-instagram"></i></a>
                 <img src="assets/star-right.webp" alt="star"
