--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
         <div class="flex flex-col items-center gap-3 w-[90%] max-w-3xl animate-slide-up">
 
             <!-- Profile Header with Image on Side -->
-            <div class="flex items-center gap-4 mb-3">
+            <div class="glass-panel rounded-2xl px-6 py-4 flex items-center gap-4 mb-3">
+
                 <div class="drop-shadow-[0_0_10px_rgba(255,182,193,0.8)]">
                     <img id="profile-image" src="assets/profile.jpg" alt="Profile"
                         class="w-20 h-20 rounded-full object-cover border-2 border-pink-300/50">
