--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
 <body class="bg-white text-white h-screen w-screen overflow-hidden select-none">
 
+    <div class="fixed inset-0 bg-black/60 z-[1] pointer-events-none"></div>
     <div class="fixed inset-0 z-0">
         <video id="bg-video" muted loop playsinline preload="metadata"
             class="hidden md:block w-full h-full object-cover brightness-110">
